--- a/skel/etc/inetd.conf
+++ b/skel/etc/inetd.conf
@@ -9,12 +9,38 @@
 # binary                        program to run
 # arg0 arg1 arg2...             arguments, INCLUDING program name (arg0)
 
-# serv	socket pro  w/nw   user binary args
+# serv  socket pro  w/nw   user binary args
 
 # IPv6
-#555	dgram  udp6 wait   root echo echo Hello IPv6 udp world
+#555    dgram  udp6 wait   root echo echo Hello IPv6 udp world
 # ...with ADDR prefix:
-#::1:444	stream tcp6 nowait root echo echo Hello IPv6 localhost
+#::1:444        stream tcp6 nowait root echo echo Hello IPv6 localhost
 
-# Regualar telnetd service
-telnet	stream tcp  nowait  root telnetd telnetd
+#:INTERNAL: Internal services
+# It is generally considered safer to keep these off.
+#echo     stream  tcp    nowait  root    internal
+#echo     dgram   udp    wait    root    internal
+#discard  stream  tcp    nowait  root    internal
+#discard  dgram   udp    wait    root    internal
+#daytime  stream  tcp    nowait  root    internal
+#daytime  dgram   udp    wait    root    internal
+#chargen  stream  tcp    nowait  root    internal
+#chargen  dgram   udp    wait    root    internal
+#time     stream  tcp    nowait  root    internal
+#time     dgram   udp    wait    root    internal
+
+# These are standard services.
+#
+#ftp    stream  tcp     nowait  root    /usr/sbin/tcpd  in.ftpd
+#telnet stream  tcp     nowait  root    /sbin/telnetd   /sbin/telnetd
+#nntp   stream  tcp     nowait  root    tcpd    in.nntpd
+#smtp   stream  tcp     nowait  root    tcpd    sendmail -v
+
+# Finger, systat and netstat give out user information which may be
+# valuable to potential "system crackers."  Many sites choose to disable
+# some or all of these services to improve security.
+#
+#finger  stream  tcp     nowait  nobody  /usr/sbin/tcpd       in.fingerd -w
+#systat  stream  tcp     nowait  nobody  /usr/sbin/tcpd       /bin/ps -auwwx
+#netstat stream  tcp     nowait  root    /bin/netstat         /bin/netstat -a
+#ident   stream  tcp     nowait  root    /usr/sbin/in.identd  in.identd
