Simplify telnetd.conf
This file used to serve as an example of multple services.

Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/skel/etc/finit.d/available/telnetd.conf
+++ b/skel/etc/finit.d/available/telnetd.conf
@@ -1,2 +1,1 @@
-service [2345] <!> :23   telnetd -F -p 23   -- Telnet daemon on port 23
-service [2345] <!> :2323 telnetd -F -p 2323 -- Telnet daemon on port 2323
+service [2345] <!> telnetd -F -- Telnet daemon
