--- a/skel/etc/finit.d/available/ntpd.conf
+++ b/skel/etc/finit.d/available/ntpd.conf
@@ -1,2 +1,1 @@
-# Wait for the system to have a default route before starting
-service [2345] log <!net/route/default> ntpd -n -l -I eth0 -- NTP daemon
+service [2345789] log env:-/etc/default/ntpd ntpd -n -l $NTPD_ARGS -- NTP daemon
