--- a/skel/etc/finit.d/available/chronyd.conf
+++ b/skel/etc/finit.d/available/chronyd.conf
@@ -1,2 +1,3 @@
-# Requires /etc/chrony.conf to star, see https://chrony.tuxfamily.org/doc/3.4/chrony.conf.html
+# Requires /etc/chrony.conf to start, for syntax see
+# https://chrony.tuxfamily.org/doc/3.4/chrony.conf.html
 service [2345789] env:-/etc/default/inadyn chronyd -n $CHRONY_ARGS -- Chrony NTP v3/v4 daemon
