/etc/inetd.conf: update for tftpd, ftpd, telnetd, and ident
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/skel/etc/inetd.conf
+++ b/skel/etc/inetd.conf
@@ -1,5 +1,7 @@
 # Services started by Busybox inetd on demand
 #
+# Enable inetd in Finit: initctl enable inetd && initctl reload
+#
 # [ADDR:]service_name           must be in /etc/services, or port number
 # socket_type                   stream/dgram/raw/rdm/seqpacket
 # protocol                      tcp/udp
@@ -31,8 +33,9 @@
 
 # These are standard services.
 #
-#ftp    stream  tcp     nowait  root    /usr/sbin/tcpd  in.ftpd
-#telnet stream  tcp     nowait  root    /sbin/telnetd   /sbin/telnetd
+#tftp   dgram   udp     nowait  root    tftpd   tftpd -i -l /srv/tftp
+#ftp    stream  tcp     nowait  root    ftpd    ftpd  -i -S /srv/ftp
+#telnet stream  tcp     nowait  root    telnetd telnetd -i
 #nntp   stream  tcp     nowait  root    tcpd    in.nntpd
 #smtp   stream  tcp     nowait  root    tcpd    sendmail -v
 
@@ -43,4 +46,4 @@
 #finger  stream  tcp     nowait  nobody  /usr/sbin/tcpd       in.fingerd -w
 #systat  stream  tcp     nowait  nobody  /usr/sbin/tcpd       /bin/ps -auwwx
 #netstat stream  tcp     nowait  root    /bin/netstat         /bin/netstat -a
-#ident   stream  tcp     nowait  root    /usr/sbin/in.identd  in.identd
+#ident   stream  tcp     nowait  root    fakidentd	      fakeidentd -i buildroot
