--- a/skel/etc/finit.d/available/syslogd.conf
+++ b/skel/etc/finit.d/available/syslogd.conf
@@ -1,8 +1,10 @@
 # BusyBox syslogd + klogd
 
-# We want syslogd to always run, never be stopped, regardless of runlevel
-# so it can send to any remote syslog server the user has set up.
-service [S123456789] <!> syslogd -n -s 512 -b 3 -t -- System log daemon
+# We want syslogd to always run, never be stopped, regardless of
+# runlevel, so it can send dying gasp to any remote syslog servers
+service [S123456789] <!> pid:/run/syslogd.pid syslogd -n -s 512 -b 3 -t -- System log daemon
 
-# klogd depends on syslogd, but BusyBox syslogd doesn't create a PID file to sync with
+# klogd depends on syslogd, but BusyBox syslogd doesn't create a PID
+# file to sync with so we tell finit to create it for us (above), if
+# syslogd is stopped/restarted so is klogd.
 service [S123456789] <!pid/syslogd> klogd -n -- Kernel log daemon
