Sync mDNS and SSDP service definitions with Infix
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/skel/etc/finit.d/available/ssdp-responder.conf
+++ b/skel/etc/finit.d/available/ssdp-responder.conf
@@ -1,1 +1,2 @@
-service [2345] ssdpd -ns -- SSDP Responder
+service [2345789] name:ssdp env:-/etd/default/ssdp-responder \
+	ssdpd -ns $SSDPD_OPTS $SSDPD_ARGS -- SSDP Responder
