--- a/skel/etc/finit.d/available/dnsmasq.conf
+++ b/skel/etc/finit.d/available/dnsmasq.conf
@@ -1,1 +1,2 @@
-service [2345789] env:-/etc/default/dnsmas dnsmasq -k $DNSMASQ_ARGS -- DHCP/DNS proxy
+service [S12345789] env:-/etc/default/dnsmasq \
+	dnsmasq -k $DNSMASQ_ARGS -- DHCP/DNS proxy
