--- a/skel/etc/finit.d/available/watchdogd.conf
+++ b/skel/etc/finit.d/available/watchdogd.conf
@@ -1,6 +1,6 @@
-# Finit comes with a bundled mini-watchdogd, for myLinux this is disabled, so
-# we want to start watchdogd as soon as possible.  Remember to allow rtprio
-# and thus running the daemon in the root cgroup.
+# Finit comes with an optional mini-watchdogd, when that's not enabled
+# we want to start watchdogd as soon as possible.  Remember rtprio, and
+# due to SCHED_RR, run the daemon in the root cgroup.
 rlimit rtprio 99
 service cgroup.root env:-/etc/default/watchdogd \
 	[S0123456789] watchdogd -xns $WATCHDOGD_ARGS -- System watchdog daemon
