--- a/skel/etc/inetd.conf
+++ b/skel/etc/inetd.conf
@@ -33,8 +33,8 @@
 
 # These are standard services.
 #
-#tftp   dgram   udp     nowait  root    tftpd   tftpd -i -l /srv/tftp
-#ftp    stream  tcp     nowait  root    ftpd    ftpd  -i -S /srv/ftp
+#tftp   dgram   udp     nowait  root    tftpd   tftpd -lc /srv/tftp
+#ftp    stream  tcp     nowait  root    ftpd    ftpd  -Sw /srv/ftp
 #telnet stream  tcp     nowait  root    telnetd telnetd -i
 #nntp   stream  tcp     nowait  root    tcpd    in.nntpd
 #smtp   stream  tcp     nowait  root    tcpd    sendmail -v
