--- a/skel/etc/finit.d/available/wpa_supplicant.conf
+++ b/skel/etc/finit.d/available/wpa_supplicant.conf
@@ -1,1 +1,2 @@
-service [2345] wpa_supplicant -s -iwlan0 -c/etc/wpa_supplicant.conf -- WPA Supplicant
+service env:-/etc/default/wpa_supplicant \
+	[2345] wpa_supplicant -s $wPA_SUPPLICANT_ARGS -c/etc/wpa_supplicant.conf -- WPA Supplicant
