--- a/skel/etc/finit.d/available/dnsd.conf
+++ b/skel/etc/finit.d/available/dnsd.conf
@@ -1,1 +1,1 @@
-service [2345789] log env:-/etc/default/dnsd dnsd $DNSD_ARGS -- DNS daemon
+service [2345] log env:-/etc/default/dnsd dnsd $DNSD_ARGS -- DNS daemon
