--- a/skel/etc/finit.d/available/udhcpd.conf
+++ b/skel/etc/finit.d/available/udhcpd.conf
@@ -1,1 +1,1 @@
-service env:-/etc/default/udhcpd udhcpd -f $UDHCPD_ARGS -- DHCP server
+service env:-/etc/default/udhcpd udhcpd -fS $UDHCPD_ARGS -- DHCP server
