Add missing line-continuation backslash
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/skel/etc/finit.d/available/dropbear.conf
+++ b/skel/etc/finit.d/available/dropbear.conf
@@ -1,5 +1,5 @@
 # <!>: dropbear does not honor SIGHUP.
 #  -R: Create hostkeys if needed.
 #  -F: Run in foreground.
-service log env:-/etc/default/dropbear <!>
+service log env:-/etc/default/dropbear <!> \
 	[2345] dropbear -F -R $DROPBEAR_ARGS -- Dropbear SSH daemon
