--- a/skel/etc/finit.d/available/gdbserver.conf
+++ b/skel/etc/finit.d/available/gdbserver.conf
@@ -1,2 +1,2 @@
-service env:-/etc/default/gdbserver <!pid/syslogd>
+service env:-/etc/default/gdbserver <!pid/syslogd> \
 	[S0123456789] gdbserver $GDBSERVER_ARGS -- GDB Server
