--- a/skel/etc/finit.d/available/inadyn.conf
+++ b/skel/etc/finit.d/available/inadyn.conf
@@ -1,2 +1,2 @@
-service env:-/etc/default/inadyn <net/route/default>
+service env:-/etc/default/inadyn <net/route/default> \
 	[2345] inadyn -ns $INADYN_ARGS -- In-a-Dyn DDNS client
